Update 9. Statistical Inference.md

--- a/2022-Data Science/9. Statistical Inference.md
+++ b/2022-Data Science/9. Statistical Inference.md
@@ -52,3 +52,78 @@
 - 4V
   - Volume, Variety, Velocity, Value
   - Big Data를 규정하는 하나의 방식으로 이 용어들을 이용한다.
+
+## Statistical Inference Example : 수면제 효과 연구
+- 문제 : 숙면에 도움을 주기 위해 개발한 약의 효과
+- 표본 : 각각 10명의 실험 지원자로 구성된 2개의 그룹
+  - 실험 지원자가 약을 먹었을 때 증가한 수면 시간 측정
+  - Between Subjects : 두 그룹에 다른 약을 먹인다.
+  - Within Subjects : 두 그룹에게 A를 먹인 뒤, 시간이 지나고 B를 다시 먹인다.
+- EDA의 주요 결과
+  - 10명 중 4명은 수면시간 감소, 6명은 증가
+  - 평균 0.75시간의 수면시간 증가
+  - 표본 표준 편차(Sample Standard Deviation)은 1.8시간
+  - 데이터 분포에서 약간의 Bimodality(KDE, 봉우리 2개)가 보이는 것 외에 특이사항 없음.
+- 그런데 이는, __수면제의 효과에 대한 의미있는 설명__ 으로 이어지지 못한다.
+  - 따라서 통계적 작업이 필요하다.
+
+### Statistical Inference
+> *이 수면제는 효과가 있는가?  
+
+- 가설 검정(Hypothesis Test)
+  - 검정 : 검사하여 정함, 규칙에 따라 자격이나 조건을 검사함.
+  - 검증 X
+- 신뢰 구간(Confidence Interval) : 이 수면제의 효과는 얼마인가?
+- 예측(Prediction) : 누군가 다른 사람이 이 수면제를 복용하면 어떤 효과가 있을 것인가?
+
+### One-sample T-test
+- ```ttest_1samp(a, popmean, alternative='two-sided')
+  - a : 대상 데이터
+  - popmean : Population Mean, 모집단 평균
+  - alternative : Default는 'Two-Sided'이다. (Less, Greater도 있음)
+- 결과 값
+  - Statistic : T-통계량
+  - Pvalue : P-value
+- 함수의 호출 자체는 쉽지만, 해석하는 것이 어렵다!
+---
+### P-value?
+- T-test의 결과와 P-value의 의미
+  - P-Value란, 귀무가설이 맞다는 전제 하에, 통계값이 실제 관측 값 이상일 확률을 의미한다.
+    - 특정 가설을 세웠을 때, 밀도 함수 그래프에서 그 가설보다 큰 부분의 값을 의미한다. 
+    - A와 B를 비교했을 때, P-value가 낮게 나오면 그 가설은 신뢰구간에서 멀다는 의미이므로 기각한다.
+    - 반대로 P-value가 크게 나오면 가설은 신뢰구간에 포함된다는 말이므로 채택한다.
+  - Two-sided : 약이 수면 시간 변화에 효과가 없는데, 이러한 표본 평균 수면 시간 변화의 관측 확률은 21.75%이다.
+  - Greater : 약이 수면 시간 증가에 효과가 없는데 이러한 표본 평균 수면 시간 변화의 관측 확률이 10.87%이다.
+- __지식의 저주__
+  - __자신이 알고있는 정보를, 당연히 다른 사람도 알 것이라는 고정관념에서 나오는 인식의 왜곡__
+---
+
+## About Statistics
+### 첫째, 통계학은 숨겨진 진실을 추구한다.
+- 알려지지 않은 참값이 있음을 가정한다.
+  - 모집단의 알려지지 않은 참값이 있음을 가정한다.
+  - ex) Population Mean
+  - 통계적 추정 : 불완전한, 잡음이 섞인 Data로부터 숨겨진 진실을 찾는 작업.
+- 가설 검정 : 수면제는 효과가 있는가?
+  - 모수(진실)에 대한 두 가지 가설
+  - Popmean = 0 : 수면제는 효과가 없다.(귀무가설, Null Hypothesis)
+  - Popmean > 0 : 수면제는 수면 시간을 늘리는 데에 효과가 있다. (대립가설, Alternative Hypothesis)
+    - 대립가설이 우리가 보이고 입증하고 싶은 가설.
+- 가설 검정과 무죄추정의 원칙
+  - 귀무가설 : 무죄.
+    - 증거 불충분
+  - 대립가설 : 유죄
+    - 귀무가설과 대립되는 증거가 많으면 많을수록, 유죄임을 선고하기가 쉬워진다.
+    - 즉, 귀무가설 하에 관측되기 어려운 데이터 값이 많이 관측될 수록 유죄임을 선고하기가 쉽다!
+ 
+### 둘째, 통계학은 불확실성을 인정한다.
+- 통계학적이지 않은 결론
+  - 이 수면제는 수면시간을 늘리는 효과가 있다.
+  - 평균 수면시간의 증가는 0.75시간 이다.
+  - 통계학은 이렇게 확실하게 결론 내리지 않는다.
+- 통계학의 __겸손한__ 대답(__Uncertainty__)
+  - 이 수면제가 효과가 없는데, 이렇게 큰 표본 평균 수면 시간 증가가 관측될 확률은 11%이다.(P-value)
+  - 평균 수면시간의 증가에 대한 95% 신뢰구간은 [-0.53, 2.03] 이다.
+- 통계학은 어렵다.
+  - 사람은 직관적인 시스템(Fast Thinking)이 발달하는 쪽으로 진화했다.
+    - 하지만 통계학은 Slow Thinking으로, 우리의 평이한 본성과는 거리가 있다.
