--- a/2022-Data Science/9. Statistical Inference.md
+++ b/2022-Data Science/9. Statistical Inference.md
@@ -127,3 +127,96 @@
 - 통계학은 어렵다.
   - 사람은 직관적인 시스템(Fast Thinking)이 발달하는 쪽으로 진화했다.
     - 하지만 통계학은 Slow Thinking으로, 우리의 평이한 본성과는 거리가 있다.
+
+### 셋째, 통계학은 관측된 데이터가 가능한 여러 값 중 하나라고 생각한다.
+- 현재 관측한 데이터는 모집단에서 관측될 수 있는 여러 가능한 데이터 중 하나다. (자명)
+- Simulation으로 아주 많은 Sample을 생성하자.
+  - Simulation : 주어진 가정하에 여러 현실을 만들어보는 작업
+  - Example : 모집단 모델링(Gaussian / Normal)
+    - 수면제 효과가 없다.(평균 = 0)
+    - 표준편차(STD)가 1.8시간.
+    - N(0, 1.8^2)
+- Sample들의 Statistic을 구하자
+  - T-statistic
+- Prob(T >= t)
+  - 앞서 T-test에서 구한 결과
+    - T-statistic = 1.3257101407..
+    - p-value = 0.108798890034.. (Alternative = 'greater')
+  - T-statistic 값이 1.3257101407.. 보다 큰 비율이 P-value에 거의 부합한다!
+  - 즉 Prob(T >= t)가 P-value가 된다.
+---
+### 용어 정리
+- 모집단(Population) : 알고 싶은 값이 나올 수 있는 전체 집단.
+- 모수(Population Parameter) : 모집단을 설명하는 어떤 숫자. (ex) Mean, STD)
+- 표본(Sample) : 모집단의 일부를 Random Sampling 과정을 통해 추출한 집단
+  - Sample의 통계량을 통해 모집단의 통계량을 추정한다.
+- 통계량(Statistics) : Mean, STD, T-statistics등의 그 집단이 가지는 수치적 특성, 가설 검정에 사용이 된다.
+- 귀무가설(Null Hypothesis) : H0 라고 보통 표기하며, 모평균이 0이라고 가정하는 가설.
+  - 우리가 일반적으로 검정하고 싶은 가설에 반대되도록 가설을 세운다.
+- 대립가설(Alternative Hypothesis) : 귀무가설과 대립되는 가설로, H1이라고 보통 표기한다.
+  - 우리가 일반적으로 검정하고 싶은 가설이다.
+  - Two-sided Alternative : Mean != 0
+  - One-sided Alternavie : Mean > 0 (greater), Mean < 0 (less)
+- Type-1 Error(False Positive) : 귀무가설이 옳은 데, 틀렸다고 판단하는 Error (Prob = alpha)
+  - 수면제 효과가 실제로 없을 때(귀무가설이 옳을 때), 효과가 있다고 판단하는 경우
+- Type-2 Error(False Negative) : 귀무가설을 Reject했는데, 옳다고 판단하는 Error
+  - 수면제 효과가 실제로 있을 때(귀무가설을 Reject 할 때), 효과가 없다고 판단하는 경우
+- 유의 수준(Significance level, Alpha) : 위 Error가 발생할 확률
+  - Error가 발생하지 않고 올바른 값이 나올 확률은 (1-Alpha)
+
+### 용어 사용의 예시 : 수면 시간 증가 문제
+- 모집단 : 무수히 많은 수면 환자들
+- 모수 : 무수히 많은 수면 환자들의 평균 수면 시간 증가
+- 표본 : Random하게 추출한 10명
+- 통계량 : 표본의 평균 수면시간 증가
+- 귀무가설 : 주어진 수면제는 수면시간 증가에 효과가 없다.
+- 대립가설 : 주어진 수면제는 수면시간 증가에 효과가 있다.
+- Type-1 Error : 실제로 수면제 효과가 없을 때 효과가 있다고 결론짓는 오류
+- Type-2 Error : 실제로 수면제 효과가 있을 때 효과가 없다고 결론짓는 오류
+- P-value : 실제로 수면제의 효과가 없을 때, 평균 수면시간 증가가 표본의 통계량이 보여준 것만큼 클 확률.
+---
+
+## Student's T-distribution
+- Z-Statistics
+  - Data : 독립적이고, IID Gaussian 분포를 따른다.
+  - N(mean, STD^2) ==> 귀무 가설이 참이 되면, 이는 정규분포를 따른다.
+  - 문제점 : 모집단의 STD를 알기 어렵다.
+- T-Statistics
+  - William Gosset이 맥주의 품질을 모니터하기 위한 방법으로 개발
+  - T(v), v = 자유도 n-1, 자유도가 커질 수록 정규분포에 근사한다.
+    - 자유도가 작을수록 꼬리부분이 두터워진다.
+
+## T-Test
+- 통계적 가설 검정.
+  - Test 통계량이 T-distribution이 따를 때 적용한다.
+- 가정
+  1. 각 관측치가 모두 독립적이고
+  2. 동일한 분포를 따르며
+  3. 그 분포는 정규 분포여야 한다.
+- Table을 이용하여 계산한다.
+  - 컴퓨터의 보급과 활용이 보편화되기 이전엔 그랬다.
+
+### T-test 해석
+- 판단의 기준
+  - 유의 수준 Alpha
+    - Alpha : 10%, 5%, 1%..
+  - One-side T-test 기준
+    - P-value < Alpha : Reject Null
+    - P-value > Alpha : Don't Reject Null, 통계적으로 유의하다.
+
+### P-value의 오해와 남용
+- P-value보다 유의성만 보고하는 오류
+  - Alpha가 0.05일 때, P-value가 각각 0.049 0.051 으로 나왔을 때, 둘이 서로 다른 결과를 보고하게 된다.
+  - Reject 여부만 보고하는 것이 아닌 P-value 자체를 보고함이 필요하다.
+- P-value만을 고려하고 신뢰구간을 사용하지 않는 오류
+- P-value를 모수에 대한 확률로 이해하는 오류
+  - 그 수면제가 효과가 있을 확률이 95%이다.
+    - Alpha를 0.05로 가정했을 때, 위의 결과를 보고한다.
+  - 그 수면제가 효과가 없다는 귀무가설이 맞을 확률이 95%이다.
+    - 이 또한 잘못된 해석이다.
+- 높은 P-value를 귀무가설이 옳다는 증거로 이해하는 오류.
+  - 단지 증거의 불충분을 의미할 뿐이다.
+- 낮은 P-value가 항상 유의하다고 이해하는 오류
+  - 낮은 P값을 얻었는데 평균 수면 시간 증가가 1초라면? 크게 유의한 값은 아니다.
+  - Data가 커지면 커질 수록 일반적으로 P값은 작아진다.
+    - 즉, 가설검정의 민감도가 커진다.
