Update 10.Simple Linear Regression.md

--- a/2022-Data Science/10.Simple Linear Regression.md
+++ b/2022-Data Science/10.Simple Linear Regression.md
@@ -43,3 +43,19 @@
 - Kendall's Tau
 - Spearman's Rank Correlation(rho)
   - Pandas의 ```Corr()``` 함수에 Option으로 ```pearson, kendall, spearman```을 넣을 수 있다.
+
+## Simple Linear Regression - Least Squares Regression Equations
+- y = b0 + b1x : Simple Linear Regression Model
+  - b0 : Intercept
+  - b1 : Slope
+- y ~ b0 + b1x + ei
+  - ei(Epsilon i) : Error term
+  - b1 : Rxy * (Sx / Sy)
+  - b0 = y - b1x
+
+### Least(Residual Sum of) Square Methods
+- Residual(잔차)
+  - Linear Graph와 Data의 y값 차이를 의미한다.
+- 최소 제곱법(LSM)
+  - 잔차의 제곱의 합을 최소로 만드는 방법을 말한다.
+  - 최소의 Error를 만든다는 말이다.
