--- a/2022-Data Science/10.Simple Linear Regression.md
+++ b/2022-Data Science/10.Simple Linear Regression.md
@@ -59,3 +59,21 @@
 - 최소 제곱법(LSM)
   - 잔차의 제곱의 합을 최소로 만드는 방법을 말한다.
   - 최소의 Error를 만든다는 말이다.
+
+### Coefficient of Determination : r^2
+> 어떤 Data들이, 이 Model의 적합도를 잘 나타내는지 말해준다.  
+
+- r^2 : 결정 계수
+  - 모형 적합도를 표현하는 값이다.
+  - Prediction Error가 얼마나 제거되었는 지를 표현한다. (최소제곱회귀 내에서)
+  - SST : Total sum of squares ((Data의 y값 - y값 평균)의 제곱)
+  - SSR : Regression sum of squares ((y Predicted value - y값 평균)의 제곱)
+  - SSE : Error sum of Squares ((Data의 y값 - y Predicted value)의 제곱)
+  - 이 때 r^2 = SSR/SST이고, SST = SSR + SSE
+    - 따라서 r^2 = (SST-SSE)/SST = 1 - SSE/SST
+- Intuition(직관) of r^2
+  - Regression을 사용하지 않을 때에는, 단순히 Average를 통해서 SST값을 내어 Error 정도를 예측할 수 있다.
+  - Regression을 사용할 때에는?
+    - SSE를 계산해서 Error의 정도를 예측할 수 있다.
+    - 훨씬 Error가 줄어든다!
+    - 이 때, SST - SSE / SST ==> 즉, r^2은 회귀를 했을 때와 안했을 때 얼마나 Error 값이 줄어드는 지를 의미한다!
