Update and rename Chi Square Test.md to 11. Chi Square Test.md

--- a/2022-Data Science/11. Chi Square Test.md
+++ b/2022-Data Science/11. Chi Square Test.md
@@ -37,4 +37,4 @@
 - 위 Test에는 몇가지 Condition이 필요하다.
   1. Data는 Random하게 모집단에서 뽑아온 Data이거나, Randomized Experiment에서 추출된 Data여야 한다.
   2. 비복원 추출의 경우엔, Sample size가 전체 모집단의 10% 미만이어야 Sample의 독립성을 보장할 수 있다.
-  3. Expected Value의 갯수는 최소 5개보다는 많아야 한다.
+  3. Expected Value의 갯수는 최소 5개보다는 많아야 한다. (Observation에는 적용 X)
