Update 11. Chi Square Test.md

--- a/2022-Data Science/11. Chi Square Test.md
+++ b/2022-Data Science/11. Chi Square Test.md
@@ -38,3 +38,12 @@
   1. Data는 Random하게 모집단에서 뽑아온 Data이거나, Randomized Experiment에서 추출된 Data여야 한다.
   2. 비복원 추출의 경우엔, Sample size가 전체 모집단의 10% 미만이어야 Sample의 독립성을 보장할 수 있다.
   3. Expected Value는 최소 5보다는 커야 한다. (Observation에는 적용 X)
+
+### Chi^2 Test for Contingency Table
+> Crosstab이라고도 알려져있는, 도수분포표(분할표) 이다.   
+
+![image](https://user-images.githubusercontent.com/71700079/172387784-da64cc41-5592-4159-8fd1-05a8582911ed.png)  
+- 위 Contingency Table로는 적합도 검정은 불가능하다.
+  - 대신 독립성 검정과, 동질성 검정은 가능하다.
+  - Test of Homogeneity : 두 그룹의 분포가 같은 분포를 따르는가?, 분리된 두 독립 Group.
+  - Test of Independence : 두 그룹이 서로 독립인가?, 하나의 Sample이나 Group에서 여러개의 요인(Factor).
