Update 12. Logistic Regression.md

--- a/2022-Data Science/12. Logistic Regression.md
+++ b/2022-Data Science/12. Logistic Regression.md
@@ -8,7 +8,7 @@
   - ex) 시험에 Pass할 수 있는 확률에 대한 평가  
 
 <p align = "center">
-![adw](https://user-images.githubusercontent.com/71700079/173174925-d89b198f-3160-4f16-b8d6-8c4fdc43e67c.PNG)  
+<img src = "https://user-images.githubusercontent.com/71700079/173174925-d89b198f-3160-4f16-b8d6-8c4fdc43e67c.PNG"> 
 </p>
 
 ## Evaluation Metrics
